--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <button class="button">Click here</button>
     <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium officiis, nihil est repellendus velit excepturi vero repellat deserunt ex dignissimos, totam ut a accusantium dolorum error ipsum impedit molestiae non cumque inventore. Totam, repellendus laborum!</p>
     <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt odio mollitia voluptates cum, accusamus deserunt expedita quasi dolorum vel aspernatur, quaerat sed eos, asperiores consectetur corporis praesentium. Repellat necessitatibus suscipit asperiores voluptates maiores autem. Nihil ea aspernatur culpa accusamus consectetur quidem sequi, fuga enim modi, at amet suscipit, architecto veritatis?</p>
+    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt odio mollitia voluptates cum, accusamus deserunt expedita quasi dolorum vel aspernatur, quaerat sed eos, asperiores consectetur corporis praesentium. Repellat necessitatibus suscipit asperiores voluptates maiores autem. Nihil ea aspernatur culpa accusamus consectetur quidem sequi, fuga enim modi, at amet suscipit, architecto veritatis?</p>
   </main>
 </body>
 </html>
